--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ function sendeBewerbung() {
     const nachricht = document.getElementById("nachricht").value;
 
     // Simulieren das Senden der Daten an den Discord Webhook
-    fetch("https://discord.com/api/webhooks/1300818449005805721/JGZ3M34O05sL2NmcLX3PQozbgzMYUvjVRCHjl_Bjj8EKA4jgCZF8hkcSftEy5_AiAJHN", {
+    fetch("", {
         method: "POST",
         headers: {
             "Content-Type": "application/json"
